--- a/front-end/index.html
+++ b/front-end/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="icon" href="unnamed.png">
     <link rel="stylesheet" href="styles.css" />
     <title>Capstone Project</title>
     
